docs/dolfin/1.3.0/python/source/programmers-reference/cpp/mesh/index.rst
.. Index file for the dolfin.cpp.mesh module.

.. _programmers_reference_cpp_mesh_index:

dolfin.cpp.mesh module
**********************

Classes:

.. toctree::
    :maxdepth: 1

    ALE
    BoostGraphOrdering
    BoundaryMesh
    BoundingBoxTree
    BoundingBoxTree3D
    Box
    BoxMesh
    CSGCGALMeshGenerator2D
    CSGCGALMeshGenerator3D
    CSGDifference
    CSGGeometries
    CSGGeometry
    CSGIntersection
    CSGMeshGenerator
    CSGOperator
    CSGPrimitive
    CSGPrimitive2D
    CSGPrimitive3D
    CSGUnion
    Cell
    CellFunction
    CellFunctionBool
    CellFunctionDouble
    CellFunctionInt
    CellFunctionSizet
    CellType
    Circle
    CircleMesh
    Cone
    Cylinder
    DomainBoundary
    DynamicMeshEditor
    Edge
    EdgeFunction
    EdgeFunctionBool
    EdgeFunctionDouble
    EdgeFunctionInt
    EdgeFunctionSizet
    Ellipse
    EllipseMesh
    EllipsoidMesh
    Face
    FaceFunction
    FaceFunctionBool
    FaceFunctionDouble
    FaceFunctionInt
    FaceFunctionSizet
    Facet
    FacetCell
    FacetFunction
    FacetFunctionBool
    FacetFunctionDouble
    FacetFunctionInt
    FacetFunctionSizet
    GenericBoundingBoxTree
    Graph
    GraphBuilder
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalMesh
    HierarchicalMeshFunctionBool
    HierarchicalMeshFunctionDouble
    HierarchicalMeshFunctionInt
    HierarchicalMeshFunctionSizet
    HierarchicalMeshFunctionUInt
    ImplicitDomainMeshGenerator
    ImplicitSurface
    IntervalMesh
    LocalMeshData
    Mesh
    MeshColoring
    MeshConnectivity
    MeshData
    MeshDisplacement
    MeshDomains
    MeshEditor
    MeshEntity
    MeshFunction
    MeshFunctionBool
    MeshFunctionDouble
    MeshFunctionInt
    MeshFunctionSizet
    MeshGeometry
    MeshPartitioning
    MeshPointIntersection
    MeshQuality
    MeshRenumbering
    MeshTopology
    MeshTransformation
    MeshValueCollection
    MeshValueCollectionBool
    MeshValueCollectionDouble
    MeshValueCollectionInt
    MeshValueCollectionSizet
    PeriodicBoundaryComputation
    Point
    Polygon
    PolygonalMeshGenerator
    PolyhedralMeshGenerator
    Rectangle
    RectangleMesh
    Restriction
    SCOTCH
    Sphere
    SphereMesh
    SubDomain
    SubMesh
    SubsetIterator
    Surface3D
    Tetrahedron
    Triangulate
    UnitCircle
    UnitCircleMesh
    UnitCube
    UnitCubeMesh
    UnitInterval
    UnitIntervalMesh
    UnitSquare
    UnitSquareMesh
    UnitTetrahedronMesh
    UnitTriangleMesh
    Vertex
    VertexFunction
    VertexFunctionBool
    VertexFunctionDouble
    VertexFunctionInt
    VertexFunctionSizet
    cells
    edges
    entities
    faces
    facets
    vertices

Functions:

.. toctree::
    :maxdepth: 1

    ALE_move
    BoostGraphOrdering_compute_cuthill_mckee
    CSGCGALMeshGenerator2D_default_parameters
    CSGCGALMeshGenerator3D_default_parameters
    CSGMeshGenerator_generate
    CellType_create
    CellType_string2type
    CellType_type2string
    GraphBuilder_compute_dual_graph
    GraphBuilder_local_graph
    ImplicitDomainMeshGenerator_generate
    ImplicitDomainMeshGenerator_generate_surface
    MeshColoring_cell_colors
    MeshColoring_color
    MeshColoring_color_cells
    MeshColoring_compute_colors
    MeshColoring_type_to_dim
    MeshPartitioning_build_distributed_mesh
    MeshQuality_radius_ratio_histogram_data
    MeshQuality_radius_ratio_matplotlib_histogram
    MeshQuality_radius_ratio_min_max
    MeshQuality_radius_ratios
    MeshTransformation_rotate
    MeshTransformation_translate
    PeriodicBoundaryComputation_compute_periodic_pairs
    PeriodicBoundaryComputation_masters_slaves
    PolygonalMeshGenerator_generate
    PolyhedralMeshGenerator_generate
    PolyhedralMeshGenerator_generate_surface_mesh
    SCOTCH_compute_gps
    Triangulate_triangulate
    intersect
    refine

Module docstring:

.. automodule:: dolfin.cpp.mesh
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: